V4035: Updated to .NET 8 and D997

--- a/Prevu.Synoptics.V4035_EcoGreen/Details/D354.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Details/D354.xaml
@@ -13,24 +13,12 @@
         <Labels:Pipe Width="277" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" HorizontalAlignment="Left" Canvas.Left="52" Canvas.Top="170" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Vapor" Width="86" StatusComponent="354-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="89" Canvas.Top="180" VerticalAlignment="Center"/>
-        <Rectangle Height="2" Stroke="Black" Width="63" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="189" Canvas.Top="110" VerticalAlignment="Center">
-            <d:Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1" ScaleY="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </d:Rectangle.RenderTransform>
-        </Rectangle>
+        <Rectangle Height="2" Stroke="Black" Width="63" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="189" Canvas.Top="110" VerticalAlignment="Center"/>
         <Rectangle Height="2" Stroke="Black" Width="54" HorizontalAlignment="Left" Canvas.Left="197" Canvas.Top="254" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" HorizontalAlignment="Left" Canvas.Left="183" Canvas.Top="248" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" HorizontalAlignment="Left" Canvas.Left="183" Canvas.Top="104" VerticalAlignment="Center"/>
@@ -38,19 +26,13 @@
             <Machines:V01_CV_Valve_wColor.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_CV_Valve_wColor.RenderTransform>
         </Machines:V01_CV_Valve_wColor>
         <Machines:V01_EXC_HeatExchanger Canvas.Left="166" Canvas.Top="147" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:V01_EXC_HeatExchanger.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="-90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_EXC_HeatExchanger.RenderTransform>
         </Machines:V01_EXC_HeatExchanger>
