--- a/Prevu.Synoptics.V4035_EcoGreen/OverallView.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/OverallView.xaml
@@ -14,25 +14,19 @@
              d:Background="{DynamicResource MaterialDesignPaper}" >
 
     <Canvas Height="4169" Width="8562">
-        <Labels:Pipe Canvas.Left="2390" Canvas.Top="696" PipeHeight="Medium" Width="702" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="120-01-MA1">
+        <Labels:Pipe Canvas.Left="2462" Canvas.Top="714" PipeHeight="Medium" Width="738" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="126-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2597" Canvas.Top="1042" PipeHeight="Medium" Width="147" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="120-01-MA1"/>
-        <Labels:Pipe Canvas.Left="2736" Canvas.Top="349" PipeHeight="Medium" Width="127" StatusComponent="120-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2647" Canvas.Top="1079" PipeHeight="Medium" Width="188" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="126-01-MA1"/>
+        <Labels:Pipe Canvas.Left="2826" Canvas.Top="349" PipeHeight="Medium" Width="164" StatusComponent="126-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="7778" Canvas.Top="2386" PipeHeight="Medium" Width="834" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -41,20 +35,14 @@
         <Labels:Pipe Canvas.Left="936" Canvas.Top="2867" PipeHeight="Medium" Width="146" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3483" Canvas.Top="3486" PipeHeight="Medium" Width="906" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -64,10 +52,7 @@
         <Labels:Pipe Canvas.Left="5428" Canvas.Top="3485" PipeHeight="Medium" Width="398" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -76,10 +61,7 @@
         <Labels:Pipe Canvas.Left="2672" Canvas.Top="1776" Width="384" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -88,20 +70,14 @@
         <Labels:Pipe Canvas.Left="3440" Canvas.Top="1626" Width="1250" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3612" Canvas.Top="1729" Width="1196" Color="Water" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -109,10 +85,7 @@
         <Labels:Pipe Canvas.Left="4654" Canvas.Top="1494" Width="186" Color="Water" StatusComponent="236-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -123,10 +96,7 @@
         <Labels:Pipe Canvas.Left="2054" Canvas.Top="2057" Width="1280" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -135,10 +105,7 @@
         <Labels:Pipe Canvas.Left="3981" Canvas.Top="2585" Width="224" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -148,10 +115,7 @@
         <Labels:Pipe Canvas.Left="-193" Canvas.Top="2749" Width="1900" Color="Water" StatusComponent="457-01-MA1"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -160,20 +124,14 @@
         <Labels:Pipe Canvas.Left="1885" Canvas.Top="3651" Width="96" Color="Water" StatusComponent="457-01-MA1"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3086" Canvas.Top="1840" Width="82" Color="Water" StatusComponent="457-01-MA1"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -181,50 +139,35 @@
         <Labels:Pipe Canvas.Left="3143" Canvas.Top="2154" Width="382" Color="Water" StatusComponent="477-01-MA1"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3174" Canvas.Top="2524" Width="320" Color="Water" StatusComponent="477-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3292" Canvas.Top="2746" Width="84" Color="Water" StatusComponent="477-01-MA1"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3172" Canvas.Top="2965" Width="324" Color="Water" StatusComponent="477-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Left">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3826" Canvas.Top="4005" Width="106" Color="Water" StatusComponent="477-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -232,10 +175,7 @@
         <Labels:Pipe Canvas.Left="5531" Canvas.Top="1844" Width="890" Color="Water" StatusComponent="373-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -244,31 +184,22 @@
         <Labels:Pipe Canvas.Left="3254" Canvas.Top="3982" Width="152" Color="Water" StatusComponent="477-01-MA1"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3485" Canvas.Top="3528" Width="788" Color="Water" StatusComponent="477-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="3332" Canvas.Top="3136" Width="549" Color="Water" StatusComponent="477-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="2397" Canvas.Top="735" Width="594" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="2377" Canvas.Top="755" Width="634" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -276,20 +207,14 @@
         <Labels:Pipe Canvas.Left="1400" Canvas.Top="495" Width="114" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="1419" Canvas.Top="609" Width="76" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -298,30 +223,21 @@
         <Labels:Pipe Canvas.Left="3430" Canvas.Top="1175" PipeHeight="Medium" Width="466" RenderTransformOrigin="0.5,0.5" StatusComponent="180-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="625" Canvas.Top="1012" PipeHeight="Medium" Width="794" RenderTransformOrigin="0.5,0.5" StatusComponent="180-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2523" Canvas.Top="1227" Width="342" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="2541" Canvas.Top="1245" Width="306" Color="Water" StatusComponent="293-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
