--- a/Prevu.Synoptics.V4035_EcoGreen/Pages/P460.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Pages/P460.xaml
@@ -12,10 +12,7 @@
         <Labels:Pipe Color="Vapor" Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="470-22-CV1" Canvas.Left="332" Canvas.Top="658" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -24,10 +21,7 @@
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="180" RenderTransformOrigin="0.5,0.5" StatusComponent="470-21-CV1" Canvas.Left="353" Canvas.Top="582">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -36,10 +30,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="525" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="141" Canvas.Top="208">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -47,10 +38,7 @@
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="306" RenderTransformOrigin="0.5,0.5" StatusComponent="464-01-MA1" VisibilityComponent="" Canvas.Left="332" Canvas.Top="519">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -60,26 +48,17 @@
         <Labels:Pipe Width="180" StatusComponent="462-01-MA1" PipeHeight="Medium" Canvas.Left="467" Canvas.Top="253" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="45" StatusComponent="526-01-MA1" PipeHeight="Medium" Canvas.Left="1044" Canvas.Top="186" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="190" StatusComponent="464-01-MA1" PipeHeight="Medium" Canvas.Left="654" Canvas.Top="346" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe 
-            StatusComponent="534-01-MA1" 
-            VisibilityComponent="" 
-            VisibilitySignal="" RenderTransformOrigin="0.55,0.5" Width="121" Color="Air" Canvas.Left="952" Canvas.Top="517" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe StatusComponent="534-01-MA1" RenderTransformOrigin="0.55,0.5" Width="121" Color="Air" Canvas.Left="952" Canvas.Top="517" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="99" StatusComponent="532-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1117" Canvas.Top="464" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -87,10 +66,7 @@
         <Labels:Pipe Width="46" StatusComponent="532-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1286" Canvas.Top="438" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -98,30 +74,21 @@
         <Labels:Pipe Width="288" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="940" Canvas.Top="326" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="90" StatusComponent="530-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1274" Canvas.Top="552" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="80" StatusComponent="546-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1279" Canvas.Top="678" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -134,8 +101,6 @@
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
                     <TranslateTransform X="-0.5" Y="-1.95"/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
@@ -145,9 +110,6 @@
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
@@ -169,8 +131,6 @@
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
                     <TranslateTransform X="-0.5" Y="-1.95"/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
