--- a/Prevu.Synoptics.V4035_EcoGreen/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Pages/P880.xaml
@@ -9,24 +9,17 @@
              x:Class="Prevu.Synoptics.P880" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-
         <Labels:Pipe Width="50" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="461" Canvas.Top="105" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-EC1" Canvas.Left="408" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -34,30 +27,21 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="44" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="556" Canvas.Top="176">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="110" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="388" Canvas.Top="148" VisibilityComponent="879-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="82" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="993" Canvas.Top="149">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -66,31 +50,22 @@
         <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" PipeHeight="Medium" Canvas.Left="441" Canvas.Top="652" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="522" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="449" Canvas.Top="716" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="628" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="449" Canvas.Top="716" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="352" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="20" Canvas.Top="330" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="84" StatusComponent="880-01-ECS10" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="400" Canvas.Top="464" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -99,10 +74,7 @@
         <Labels:Pipe Width="366" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="748" Canvas.Top="291" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -110,10 +82,7 @@
         <Labels:Pipe Width="128" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="523" Canvas.Top="464" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -121,10 +90,7 @@
         <Labels:Pipe Width="60" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="597" Canvas.Top="444" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -133,10 +99,7 @@
         <Labels:Pipe Width="448" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="558" Canvas.Top="304" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -147,44 +110,32 @@
         <Labels:Pipe Width="100" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="1314" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="90" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-25-CV1" VisibilitySignal="LS1" Canvas.Left="1251" Canvas.Top="572" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="92" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-25-CV1" VisibilitySignal="LS2" Canvas.Left="1386" Canvas.Top="577" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="342" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="796" Canvas.Top="549" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="342" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="901" Canvas.Top="549" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="407" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="962" Canvas.Top="382" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="301" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="1068" Canvas.Top="382" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="15" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="454" Canvas.Top="156" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:VRC_WaterCollectingTank Height="69" Width="23" Canvas.Left="475" Canvas.Top="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="382" Canvas.Top="181" Height="260" Width="306" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -200,61 +151,28 @@
             <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
         </Machines:V01_VT_CMM_Blower_Air_Compressor>
-        <Rectangle Height="2" Stroke="Black" Width="156" RenderTransformOrigin="0.5,0.5" Canvas.Left="491" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-0.151"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Labels:JumpLabel 
-            JumpFromLabel="880-01-EC1" Canvas.Left="48" Canvas.Top="68" HorizontalAlignment="Left" VerticalAlignment="Center" JumpToLabel="868-01-MA1" />
+        <Rectangle Height="2" Stroke="Black" Width="156" RenderTransformOrigin="0.5,0.5" Canvas.Left="491" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="880-01-EC1" Canvas.Left="48" Canvas.Top="68" HorizontalAlignment="Left" VerticalAlignment="Center" JumpToLabel="868-01-MA1" />
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="880-VIEW" DetailsPageName="D880" HideComponentName="True" Canvas.Left="522" Canvas.Top="216"/>
         <Labels:DetailsLabel ComponentName="883-BAG" DetailsPageName="D883_2" HideComponentName="True" Canvas.Left="1071" Canvas.Top="287" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="1339" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="883-62-BAG" Canvas.Left="975" Canvas.Top="287"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="880-62-LEV" Canvas.Left="554" Canvas.Top="216"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="880-61-LEV" Canvas.Left="424" Canvas.Top="216"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="880-01-EC1" Canvas.Left="489" Canvas.Top="392"/>
-        <Labels:DeviceLabel 
-            ComponentName="888-01-MA1" Canvas.Left="338" Canvas.Top="639" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel 
-            ComponentName="886-01-MA1" Canvas.Left="529" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel 
-      ComponentName="880-01-ECS10" Canvas.Left="318" Canvas.Top="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-      ComponentName="880-01-ECS13" Canvas.Left="634" Canvas.Top="325" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-      ComponentName="880-01-ECS11" Canvas.Left="318" Canvas.Top="349" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-      ComponentName="880-01-ECS12" Canvas.Left="318" Canvas.Top="412" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-      ComponentName="885-01-MA1" Canvas.Left="213" Canvas.Top="542" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-      ComponentName="887-01-MA1" Canvas.Left="662" Canvas.Top="565" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-      ComponentName="880-61-LS4" Canvas.Left="602" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="883-01-MA1" Canvas.Left="816" Canvas.Top="509" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="997-25-CV1" Canvas.Left="1319" Canvas.Top="530" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="883-62-BAG" Canvas.Left="975" Canvas.Top="287"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="880-62-LEV" Canvas.Left="554" Canvas.Top="216"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="880-61-LEV" Canvas.Left="424" Canvas.Top="216"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="880-01-EC1" Canvas.Left="489" Canvas.Top="392"/>
+        <Labels:DeviceLabel ComponentName="888-01-MA1" Canvas.Left="338" Canvas.Top="639" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="886-01-MA1" Canvas.Left="529" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="880-01-ECS10" Canvas.Left="318" Canvas.Top="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="880-01-ECS13" Canvas.Left="634" Canvas.Top="325" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="880-01-ECS11" Canvas.Left="318" Canvas.Top="349" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="880-01-ECS12" Canvas.Left="318" Canvas.Top="412" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="885-01-MA1" Canvas.Left="213" Canvas.Top="542" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="887-01-MA1" Canvas.Left="662" Canvas.Top="565" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="880-61-LS4" Canvas.Left="602" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="883-01-MA1" Canvas.Left="816" Canvas.Top="509" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="997-25-CV1" Canvas.Left="1319" Canvas.Top="530" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
