--- a/Prevu.Synoptics.V4035_EcoGreen/PlantView.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/PlantView.xaml
@@ -365,7 +365,7 @@
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="416" Canvas.Left="32" Canvas.Top="28" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="425" Canvas.Left="444" Canvas.Top="352" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="448" Canvas.Left="444" Canvas.Top="352" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="288" Canvas.Left="757" Canvas.Top="129" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="757" Canvas.Top="219" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Misc:DashedLine.RenderTransform>
@@ -515,6 +515,6 @@
         <Labels:DeviceLabel x:Name="S210_Copia1" ComponentName="S310" Canvas.Left="1077" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="Q61_Copia" ComponentName="Q91" Canvas.Left="695" Canvas.Top="693" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="S610_Copia" ComponentName="S910" Canvas.Left="804" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="273" Canvas.Left="816" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="273" Canvas.Left="1978" Canvas.Top="394" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
