--- a/Prevu.Synoptics.V4035_EcoGreen/Pages/P140.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Pages/P140.xaml
@@ -10,34 +10,25 @@
              x:Class="Prevu.Synoptics.P140" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="83" StatusComponent="126-01-MA1" PipeHeight="Medium" Canvas.Left="318" Canvas.Top="186" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="131" StatusComponent="126-01-MA1" PipeHeight="Medium" Canvas.Left="270" Canvas.Top="186" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="42" StatusComponent="153-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="467" Canvas.Top="642" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="44" StatusComponent="140-01-EC1" PipeHeight="Medium" Canvas.Left="932" Canvas.Top="265" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="142" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="1125" Canvas.Top="357" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -45,14 +36,10 @@
         <Labels:Pipe Width="93" StatusComponent="153-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="397" Canvas.Top="623" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="566" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="248" Canvas.Top="374" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="189" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="636" Canvas.Top="212"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="115" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="134" Canvas.Top="186"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="253" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="124" Canvas.Top="498">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -61,20 +48,14 @@
         <Labels:Pipe Width="36" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1306" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="126" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="1300" Canvas.Top="521" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -83,40 +64,28 @@
         <Labels:Pipe Width="144" StatusComponent="140-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="842" Canvas.Top="303" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="134" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="200" Canvas.Top="559" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="56" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="836" Canvas.Top="698" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="122" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="693" Canvas.Top="731" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -124,16 +93,12 @@
         <Labels:Pipe Width="113" StatusComponent="168-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1006" Canvas.Top="226" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Height="3" Width="146" RenderTransformOrigin="0.5,0.5" Canvas.Left="477" Canvas.Top="658"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Height="3" Width="184" RenderTransformOrigin="0.5,0.5" Canvas.Left="230" Canvas.Top="616"/>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Height="1" Width="144" Canvas.Left="189" Canvas.Top="181"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Height="1" Width="180" Canvas.Left="694" Canvas.Top="660"/>
         <Machines:V01_ALV_VibratingFeeder Canvas.Left="558" Canvas.Top="175" Height="75" Width="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_NT_Belt_BottleSorter Canvas.Left="768" Canvas.Top="154" Height="116" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -145,10 +110,7 @@
         <Machines:V01_Material_Inlet_Outlet Canvas.Left="1369" Canvas.Top="85" Height="69" Width="53" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Machines:V01_Material_Inlet_Outlet.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_Material_Inlet_Outlet.RenderTransform>
         </Machines:V01_Material_Inlet_Outlet>
@@ -156,14 +118,13 @@
         <Machines:NT_ConveyorBelt Height="3" Width="227" RenderTransformOrigin="0.5,0.5" Canvas.Left="1202" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Manual_selection Height="77" Width="41" Canvas.Left="1226" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="842" Canvas.Top="704" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="124-01-MA1" JumpToLabel="120-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="70" Canvas.Top="156"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="128-01-MA1" JumpToLabel="126-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="203" Canvas.Top="156"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="170-01-MA1" JumpToLabel="228-01-MA1" Canvas.Left="1405" Canvas.Top="551"/>
         <Labels:JumpLabel JumpFromLabel="180-01-MA1" JumpToLabel="032-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="710" Canvas.Top="753" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="170-SORT" DetailsPageName="D170" Canvas.Left="1319" Canvas.Top="371" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="140-SORT" DetailsPageName="D140" Canvas.Left="803" Canvas.Top="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="153-01-MA1" Canvas.Left="326" Canvas.Top="556"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="155-01-MA1" Height="50" Width="90" Canvas.Left="532" Canvas.Top="596"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="126-01-MA1" Canvas.Left="216" Canvas.Top="215" RenderTransformOrigin="0.508,0.545"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="180-01-MA1" Canvas.Left="841" Canvas.Top="603"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="129-01-MA1" Canvas.Left="586" Canvas.Top="249"/>
         <Labels:DeviceLabel ComponentName="143-01-MA1" Canvas.Left="770" Canvas.Top="311" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -171,18 +132,5 @@
         <Labels:DeviceLabel ComponentName="150-01-MA1" Canvas.Left="1118" Canvas.Top="220" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="168-01-MA1" Canvas.Left="1130" Canvas.Top="109" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="168-02-EC1" Canvas.Left="1246" Canvas.Top="54" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="266" Canvas.Left="224" Canvas.Top="172" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Misc:DashedLine.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Misc:DashedLine.RenderTransform>
-        </Misc:DashedLine>
-        <TextBlock Width="94" Canvas.Top="54" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="261" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="Q"/><Run Language="it-it" Text="21"/></TextBlock>
-        <TextBlock Width="94" Canvas.Top="54" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="360" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="Q"/><Run Language="it-it" Text="31"/></TextBlock>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="230" Canvas.Left="128" Canvas.Top="304" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
